// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tuple() should fail 1`] = `
Object {
  "message": "Value should have a valid shape",
  "path": Array [],
  "requirement": Object {
    "message": "Value should be a number",
    "path": Array [
      "0",
    ],
    "type": "single",
    "value": "1",
  },
  "type": "dependence",
  "value": Array [
    "1",
    "text",
  ],
}
`;

exports[`tuple() should fail 2`] = `
Object {
  "message": "Value should have a valid shape",
  "path": Array [],
  "requirement": Object {
    "message": "Value should be a string",
    "path": Array [
      "1",
    ],
    "type": "single",
    "value": undefined,
  },
  "type": "dependence",
  "value": Array [
    1,
  ],
}
`;

exports[`tuple() should fail and return all errors 1`] = `
Object {
  "message": "Value should have a valid shape",
  "path": Array [],
  "requirements": Array [
    Object {
      "message": "Value should be a number",
      "path": Array [
        "0",
      ],
      "type": "single",
      "value": "1",
    },
    Object {
      "message": "Value should be a string",
      "path": Array [
        "1",
      ],
      "type": "single",
      "value": undefined,
    },
  ],
  "type": "concatenation",
  "value": Array [
    "1",
  ],
}
`;

exports[`tuple() should fail and return only the first error 1`] = `
Object {
  "message": "Value should have a valid shape",
  "path": Array [],
  "requirement": Object {
    "message": "Value should be a number",
    "path": Array [
      "0",
    ],
    "type": "single",
    "value": "1",
  },
  "type": "dependence",
  "value": Array [
    "1",
  ],
}
`;

exports[`tuple() should support custom message 1`] = `
Object {
  "message": "Custom message",
  "path": Array [],
  "requirement": Object {
    "message": "Value should be a string",
    "path": Array [
      "1",
    ],
    "type": "single",
    "value": undefined,
  },
  "type": "dependence",
  "value": Array [
    1,
  ],
}
`;
